fix: modal/nav z-index correction

--- a/QuitSoonApp/static/QuitSoonApp/css/styles.css
+++ b/QuitSoonApp/static/QuitSoonApp/css/styles.css
@@ -669,7 +669,7 @@ body {
 }
 
 .modal-container {
-  z-index: 3;
+  z-index: 9999;
   position: fixed;
   top: 0;
   left: 0;
@@ -1053,7 +1053,7 @@ header {
 }
 
 header {
-  z-index: 1000;
+  z-index: 10;
   flex-shrink: 0;
   display: flex;
   align-items: stretch;
