--- a/QuitSoonApp/static/QuitSoonApp/scss/layouts/_header.scss
+++ b/QuitSoonApp/static/QuitSoonApp/scss/layouts/_header.scss
@@ -2,7 +2,7 @@ $menu-transition-open: 0.2s;
 $menu-transition-close: 0.2s;
 
 header {
-  z-index: 1000;
+  z-index: 10;
   flex-shrink: 0;
   display: flex;
   align-items: stretch;
